Fix image sizes on small width screens

--- a/css/global.css
+++ b/css/global.css
@@ -5466,6 +5466,8 @@ a:hover {
   }
   .header img {
     display: inline-block;
+    margin: 0;
+    max-width: 100%;
   }
   .header span {
     display: block;
