--- a/less/node-ovh.less
+++ b/less/node-ovh.less
@@ -67,6 +67,8 @@ a:hover {
 
 		img {
 			display: inline-block;
+			margin: 0;
+			max-width: 100%;
 		}
 
 		span {
